feat(template) add esteban

--- a/templates/home.html
+++ b/templates/home.html
@@ -5,4 +5,5 @@
 {% block content %}
 <h1>Bienvenidos a QA Station</h1>
 <p>Descripción de la página de inicio...</p>
+<p>Hola Soy Esteban</p>
 {% endblock %}
