--- a/functional_tests/templates/functional_tests/main.html
+++ b/functional_tests/templates/functional_tests/main.html
@@ -34,7 +34,7 @@
     <div class="container">
         <h1>Proyecto: QA Station</h1>
 
-        <form id="testForm" action="{% url 'run_tests' %}" method="POST">
+        <form id="testForm" action="{% url 'run_manual_test' %}" method="POST">
             <label for="url">URL:</label>
             <input type="text" id="url" name="url" placeholder="Ingrese URL" required>
             {% csrf_token %}
