--- a/ai_module/templates/testcases.html
+++ b/ai_module/templates/testcases.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     
     <!-- Tu archivo CSS adicional si lo necesitas -->
-    <link rel="stylesheet" href="{% static 'ai_module/css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'ai_module/ai_module.css' %}">
 </head>
 <body>
 
@@ -54,6 +54,6 @@
     <!-- Bootstrap 5 JS (incluye Popper.js) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Tu script adicional -->
-    <script src="{% static 'ai_module/js/scripts.js' %}"></script>
+    <script src="{% static 'ai_module/ai_module.js' %}"></script>
 </body>
 </html>
