--- a/users/static/users/password_reset.css
+++ b/users/static/users/password_reset.css
@@ -1,68 +1,68 @@
-/* Estilos generales */
 body, html {
     height: 100%;
     margin: 0;
     font-family: 'Poppins', sans-serif;
 }
 
-/* Contenedor del background */
+/* Contenedor del registro que ocupará gran parte de la pantalla */
 .background-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 80vh; 
+    height: 80vh; /* Ocupa toda la altura de la ventana */
     background-color: white; /* Fondo blanco */
 }
 
 /* Estilos para el logo */
 .logo img {
     width: 200%;  /* El logo se ajusta al tamaño del formulario */
-    max-width: 210px; /* Tamaño máximo igual al del formulario */
+    max-width: 230px; /* Tamaño máximo igual al del formulario */
     height: auto;
     display: block;
-    margin: 0 auto 110px; /* Centra el logo horizontalmente */
-    
-
+    margin: 0 auto 10px; /* Centra el logo horizontalmente */
 }
-/* Estilos para el formulario */
-.login-form {
+
+.title {
+    text-align: center;
+    font-weight: 500;
+    margin-bottom: 20px;
+}
+
+.pw-form {
     width: 100%;
-    max-width: 400px; /* Tamaño máximo del formulario y del logo */
+    max-width: 400px; 
     padding: 30px;
-    background-color: whitesmoke; /* Fondo blanco para el formulario */
+    background-color: whitesmoke; 
     border-radius: 15px;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
-    justify-content: center; 
+    justify-content: center;  /* Centrar los inputs dentro del formulario */
     align-items: center;
 }
-
 .form-group {
     width: 100%;  /* Asegura que las cajitas ocupen todo el ancho del formulario */
     margin-bottom: 15px;
 }
-
 .form-group label {
     display: block;
-    margin-bottom: 18px;
+    margin-bottom: 5px;
     font-size: 1.0rem;
     color: #333;
 }
 
-
 .form-group input {
     width: 100%;
-    padding: 15px;
+    padding: 10px;
     font-size: 1rem;
     border: 1px solid #ddd;
-    border-radius: 8px;
+    border-radius: 4px;
     box-sizing: border-box;  /* Asegura que el padding esté dentro del tamaño total */
 }
 
-/* Estilos para el botón de inicio de sesión */
-.btn-login {
+/* Botón de registro */
+.btn-primary {
     width: 100%;
     padding: 10px;
     font-size: 1.1rem;
@@ -74,7 +74,7 @@ body, html {
     cursor: pointer;
     transition: background-color 0.3s ease; /* Suaviza el cambio de color */
 }
-
-.btn-login:hover {
-    background-color: #2e8b3d; /* Un tono más oscuro al hacer hover */
+  
+.btn-register:hover {
+     background-color: #45a049;
 }
